implement nav + visual queue with art

--- a/styles/global.css
+++ b/styles/global.css
@@ -25,3 +25,21 @@ img {
   max-width: 100%;
   display: block;
 }
+
+.image-container {
+    position: relative;
+    height: 300px;
+    overflow: hidden;
+  }
+
+.image-container img {
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+margin: auto;
+min-width: 100%;
+min-height: 100%;
+filter: blur(10px);
+}
