--- a/frontend/components/LoginGraphic/Login.module.css
+++ b/frontend/components/LoginGraphic/Login.module.css
@@ -21,16 +21,18 @@
   left: 0px;
   top: 0px;
   animation: pan-overlay 20s infinite linear;
-  background: linear-gradient(rgb(var(--primary-rgb) / 0.15),
-      rgb(var(--primary-rgb) / 0.15) 3px,
-      transparent 3px,
-      transparent 9px);
+  background: linear-gradient(
+    rgb(var(--primary-rgb) / 0.15),
+    rgb(var(--primary-rgb) / 0.15) 3px,
+    transparent 3px,
+    transparent 9px
+  );
   background-size: 100% 9px;
   height: 100%;
   width: 100%;
 }
 
-.screen>.screenimage {
+.screen > .screenimage {
   background-image: url("https://pbs.twimg.com/media/EWWCUv0U8AEw5mf?format=jpg&name=4096x4096");
   width: 100%;
   height: 100%;
@@ -50,7 +52,6 @@
     background-position: 0% 100%;
   }
 }
-
 
 @keyframes pan-image {
   0% {
