--- a/frontend/components/LoginGraphic/Login.module.css
+++ b/frontend/components/LoginGraphic/Login.module.css
@@ -33,7 +33,7 @@
 }
 
 .screen > .screenimage {
-  background-image: url("../../public/images/login.png");
+  background-image: url("../../public/stacklogo_mini.png");
   width: 100%;
   height: 100%;
   background-size: 300%;
@@ -41,6 +41,7 @@
   /*filter: sepia(100%) hue-rotate(260deg);*/
   opacity: 0.6;
   background-position: 50% 50%;
+
   background-size: 150%;
   /*animation: pan-image 20s infinite linear;*/
 }
