--- a/frontend/styles/ServerSelect.module.css
+++ b/frontend/styles/ServerSelect.module.css
@@ -1,16 +1,14 @@
 .div:hover {
   animation: enlarge 0.5s;
   cursor: pointer;
+  border-width: 2px;
+  border-color: #E0E0E0;
+  border-radius: 12px;
 }
 
-@keyframes enlarge {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.2);
-  }
-  100% {
-    transform: scale(1);
-  }
+.div {
+  border-width: 2px;
+  border-color: transparent;
+  border-radius: 12px;
+  background-color: ;
 }
